--- a/project-2/votingdapp/package.json
+++ b/project-2/votingdapp/package.json
@@ -22,6 +22,7 @@
     "@tabler/icons-react": "^3.11.0",
     "@tanstack/react-query": "^5.51.11",
     "@tanstack/react-query-next-experimental": "^5.51.11",
+    "anchor-bankrun": "^0.5.0",
     "daisyui": "^4.12.10",
     "jotai": "^2.9.1",
     "next": "14.2.5",
@@ -42,5 +43,6 @@
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.0.2",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
